--- a/Web/package.json
+++ b/Web/package.json
@@ -5,6 +5,9 @@
   "description": "A starter project for Logo designer",
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
+  "dependencies": {
+    "oauth": "^0.9.13"
+  },
   "devDependencies": {
     "bower": "^1.3.1",
     "connect-livereload": "^0.5.3",
