--- a/Web/package.json
+++ b/Web/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
-    "oauth": "^0.9.13"
+    "the-noun-project": "^2.0",
   },
   "devDependencies": {
     "bower": "^1.3.1",
